raffia/tests/recoverable/scss/variables.scss.snap
---
source: raffia/tests/recoverable.rs
---
error: Sass flag `!global` is disallowed
  ┌─ variables.scss:1:1
  │
1 │ namespace.$member: value !global;
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


